democi/deployment-argo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicddemo-service
  namespace: cicddemo
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: cicddemo
