democi/deployment-argo/nginx-ingress.yaml
# https://argoproj.github.io/argo-cd/operator-manual/ingress/
# https://kubernetes.github.io/ingress-nginx/user-guide/tls/

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cicddemo-ingress
  namespace: cicddemo
  annotations:
    kubernetes.io/ingress.class: nginx
   # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
   # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
    - host: cicddemo.lvh.me
      http:
        paths:
          - backend:
              serviceName: cicddemo-service
              servicePort: 80
